syntax = "proto3";

package quary.service.v1;

option java_multiple_files = true;

// QueryResult is the result of a ran query.
message QueryResult {
  repeated QueryResultColumn columns = 1;
}

message QueryResultColumn {
  string name = 1;

  optional string type = 3;
  repeated string values = 2;
}
